--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>Poletíme</strong></h1>
                 
                 <p class="mbr-text mbr-fonts-style display-7">Vítejte na stránkách <br><strong>Ultimate Frisbee Horní Počernice</strong><br>Chceš si vyzkoušet ten nejférovější sport na světě? <br>Sport, který se obejde bez rozhodčích i na mistrovství světa?<br>Sport, kde hrajou holky&nbsp;i kluci dohromady?</p>
-                <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-4" href="mixer.html">Počernický MIXÉR</a></div>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-4" href="https://photos.app.goo.gl/if2ZHnipas76Qpyz6">FOTO - Počernický MIXÉR</a></div>
             </div>
         </div>
     </div>
@@ -583,7 +583,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2882045" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/drag-drop-website-builder.html">Drag & Drop Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2882045" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-creator.html">Best AI Website Creator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
