--- a/o-tymu.html
+++ b/o-tymu.html
@@ -93,10 +93,9 @@
             <div class="row align-items-center">
                 <div class="col-12 col-lg">
                     <div class="text-wrapper">
-                        <h6 class="card-title mbr-fonts-style display-2">
-                            <strong>Poletíme? Poletíme!</strong></h6>
+                        <h6 class="card-title mbr-fonts-style display-2"><strong>Kdo jsme?</strong></h6>
                         <p class="mbr-text mbr-fonts-style mb-4 display-4">
-                            Jsme tým Poletíme z Prahy, konkrétně z Horních Počernic, a hrajeme sport jménem ultimate frisbee. Je to světový sport s létajícím diskem, který v sobě kombinuje prvky fotbalu, basketbalu a amerického fotbalu. I na té nejvyšší soutěžní úrovni se hraje bez rozhodčích, protože je založen na fair play a vzájemném respektu.<br><br>Život není jen o turnajích, taktikách a výhrách. Proto je pro nás mnohem důležitější si frisbee a vše kolem užít, podporovat se, radovat se a dobře při tom vypadat.&nbsp;<br><br>Že vám je název týmu povědomý? Ano je to tak. Naši zakladatelé byli velcí fandové této kapely, která osobně souhlasila s tím, že tento název smíme zneužívat.&nbsp;</p>
+                            Jsme tým Poletíme z Prahy, konkrétně z Horních Počernic, a hrajeme sport jménem ultimate frisbee. Je to světový sport s létajícím diskem, který v sobě kombinuje prvky fotbalu, basketbalu a amerického fotbalu. I na té nejvyšší soutěžní úrovni se hraje bez rozhodčích, protože je založen na fair play a vzájemném respektu.<br><br>Život není jen o turnajích, taktikách a výhrách. Proto je pro nás mnohem důležitější si frisbee a vše kolem užít, podporovat se, radovat se a dobře při tom vypadat.&nbsp;Vytváříme tým, do kterého mají otevřené dveře sportovci i nesportovci, kluci i holky – prostě kdokoli, koho zajímá frisbee.<br><br>Tým jsme založili ve spolupráci s místí Církví bratrskou, která tento projekt finančně podporuje.&nbsp;Sport je výborný nástroj pro rozvoj člověka i po mentální stránce. Jako křesťanští trenéři se chceme zabývat otázkou víry, co to pro nás znamená a jak nás to mění na hřišti i mimo něj.</p>
                         
                     </div>
                 </div>
@@ -125,10 +124,11 @@
                 </div>
                 <div class="col-12 col-lg">
                     <div class="text-wrapper">
-                        <h6 class="card-title mbr-fonts-style display-2">
-                            <strong>Na rovinu :D&nbsp;</strong></h6>
-                        <p class="mbr-text mbr-fonts-style mb-4 display-4">Text bude doplněn</p>
-                        
+                        <h6 class="card-title mbr-fonts-style display-2"><strong>Chceš vědět víc?</strong></h6>
+                        <p class="mbr-text mbr-fonts-style mb-4 display-4">Máš nějakou otázku?<br>Nejsi si jistý/á, jestli je to pro tebe?<br>Nerad/a chodíš mezi lidi, které neznáš?<br><br>Napiš nám na instagram nebo facebook a my ti rádi odpovíme, poradíme a pomůžeme.</p>
+                        <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-4" href="kontakty.html">Kontakty</a> <a class="btn btn-info-outline display-4" href="https://www.facebook.com/FrisbeeHP" target="_blank"><span class="socicon socicon-facebook mbr-iconfont mbr-iconfont-btn"></span>
+                                Facebook</a> <a class="btn btn-danger-outline display-4" href="https://www.instagram.com/poletime_ultimate/" target="_blank"><span class="socicon socicon-instagram mbr-iconfont mbr-iconfont-btn"></span>
+                                Instagram</a></div>
                     </div>
                 </div>
             </div>
@@ -184,7 +184,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2882045" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Offline Website Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2882045" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-maker.html">AI Website Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
