--- a/pridej-se.html
+++ b/pridej-se.html
@@ -112,7 +112,7 @@
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
                     <h3 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong>Co s sebou na první trenink?</strong></h3>
-                    <p class="mbr-text mbr-fonts-style display-7">Stačí jen vhodná obuv. V zimně sálovky a v létě nejlépe kopačkách (lisovkách), ale pro začátek postačí jakékoliv boty, ve kterých se dá běhat a měnit směr.<br>To je všechno.<br><br>Disk si nosit nemusíš, u nás se jich najde dost. Ale rádi obstaráme jeden disk i pro tebe.</p>
+                    <p class="mbr-text mbr-fonts-style display-7">Stačí jen vhodná obuv. V zimně sálovky a v létě nejlépe kopačky (lisovky), ale pro začátek postačí jakékoliv boty, ve kterých se dá běhat a měnit směr.<br>To je všechno.<br><br>Disk si nosit nemusíš, u nás se jich najde dost. Rádi obstaráme jeden disk i pro tebe.</p>
                 </div>
             </div>
         </div>
@@ -137,7 +137,7 @@
                 <div class="text-wrapper">
                     <h3 class="mbr-section-title mbr-fonts-style mb-3 display-2">
                         <strong>Co tě čeká?</strong></h3>
-                    <p class="mbr-text mbr-fonts-style display-7">○ Skvělá parta lidí.<br>○ Dobrý pocit, že pro sebe něco děláš.<br> ○ Tréninky jednou týdně.<br>○ Turnaje každý druhý měsíc.<br></p>
+                    <p class="mbr-text mbr-fonts-style display-7">○ Skvělá parta lidí.<br>○ Dobrý pocit, že pro sebe něco děláš.<br> ○ Tréninky jednou týdně.<br>○ Turnaje skoro každý měsíc.<br></p>
                 </div>
             </div>
         </div>
@@ -192,7 +192,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2882045" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/html-builder.html">HTML Website Generator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2882045" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-generator.html">AI Website Generator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
