--- a/mixer.html
+++ b/mixer.html
@@ -87,7 +87,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-secondary display-4" href="https://photos.app.goo.gl/if2ZHnipas76Qpyz6">FOTO MIXÉR vol.3</a> <a class="btn btn-success display-4" href="https://photos.app.goo.gl/Y63NjDmtF6TwNN2b7">FOTO MIXÉR vol.2</a>
+                <div class="mbr-section-btn align-center"><a class="btn btn-secondary display-4" href="https://forms.gle/AxjUPqs91WK7sn3C7">PŘIHLAŠOVÁNÍ</a> <a class="btn btn-success display-4" href="https://photos.app.goo.gl/if2ZHnipas76Qpyz6">FOTO MIXÉR vol.3</a> <a class="btn btn-success display-4" href="https://photos.app.goo.gl/Y63NjDmtF6TwNN2b7">FOTO MIXÉR vol.2</a>
                     <a class="btn btn-success display-4" href="https://photos.app.goo.gl/sfFa6PcqcMkCSiqm8">FOTO MIXÉR vol.1</a></div>
             </div>
         </div>
@@ -110,8 +110,8 @@
             </div>
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
-                    <h3 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong><u>Díky všem co jste dorazili!</u></strong></h3>
-                    <p class="mbr-text mbr-fonts-style display-7"></p>
+                    <h3 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong><u>INFORMACE</u></strong></h3>
+                    <p class="mbr-text mbr-fonts-style display-7">Zdravím všechny!<br><br>Jde o turnaj s cílem dát příležitost zahrát si začátečníkům a mírně pokročilým, ale přivítáme i hráče zkušené a připravené na amatérský turnaj. <br><br>Základní informace: <br>datum a čas: 7.6.2025 9:00 - 17:00 <br>místo: Horní Počernice, umělá tráva na hřišti u ZŠ Chodovická/Ratibořická <br>formát: pickup, 4v4 <br><br>Jak název napovídá, půjde o turnaj formátu pickup (týmy z přihlášených jednotlivců). Hraje se na umělé trávě. Na hřišti budeme mít stánek s občerstvením. Cena je 100 korun na osobu. Každý hráč se přihlašuje sám za sebe přes webový formulář na <a href="https://forms.gle/AxjUPqs91WK7sn3C7" class="text-primary">https://forms.gle/AxjUPqs91WK7sn3C7</a>. <br><br>Případné dotazy prosím posílejte na matej.kopecky99@seznam.cz. <br><br>Budeme rádi, když pozvánku předáte do svých týmů a podpoříte vaše nováčky k účasti.<br><br>Vaše Poletíme</p>
                 </div>
             </div>
         </div>
@@ -192,7 +192,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2882045" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/no-code-website-builder.html">No Code Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2882045" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/html-builder.html">HTML Website Creator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
